--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,1 +1,102 @@
-<p>contact-us works!</p>
+<section class="pt-8 pt-md-11 pb-8 pb-md-14">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8 text-center">
+
+                <!-- Heading -->
+                <h2 class="fw-bold">
+                    Let us hear from you directly!
+                </h2>
+
+                <!-- Text -->
+                <p class="fs-lg text-muted mb-7 mb-md-9">
+                    We always want to hear from you! Let us know how we can best help you and we'll do our very best.
+                </p>
+
+            </div>
+        </div> <!-- / .row -->
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-12 col-lg-10">
+
+                <!-- Form -->
+                <form [formGroup]="contactForm" (ngSubmit)="sendMessage()">
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <div class="form-group mb-5 has-validation">
+
+                                <!-- Label -->
+                                <label class="form-label" for="contactName">
+                                    Full name
+                                </label>
+
+                                <!-- Input -->
+                                <input class="form-control" id="contactName" type="text" placeholder="Full name" formControlName="contactName" [ngClass]="{'is-invalid' : validationRequired && formControls.contactName.errors}">
+
+                                <div class="invalid-feedback d-block" *ngIf="formSubmitted && formControls.contactName.hasError('required')">
+                                    Please enter Full name.
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="form-group mb-5">
+
+                                <!-- Label -->
+                                <label class="form-label" for="contactEmail">
+                                    Email
+                                </label>
+
+                                <!-- Input -->
+                                <input class="form-control" id="contactEmail" type="email" placeholder="hello@domain.com" formControlName="email" [ngClass]="{'is-invalid' : validationRequired && formControls.email.errors}">
+
+                                <div class="invalid-feedback d-block" *ngIf="formSubmitted && formControls.email.hasError('required')">
+                                    Please enter email.
+                                </div>
+
+                                <div class="invalid-feedback d-block" *ngIf="formSubmitted && formControls.email.hasError('email')">
+                                    Please enter valid email.
+                                </div>
+
+                            </div>
+                        </div>
+                    </div> <!-- / .row -->
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="form-group mb-7 mb-md-9">
+
+                                <!-- Label -->
+                                <label class="form-label" for="contactMessage">
+                                    What can we help you with?
+                                </label>
+
+                                <!-- Input -->
+                                <textarea class="form-control" id="contactMessage" rows="5"
+                                    placeholder="Tell us what we can help you with!" formControlName="contactMessage" [ngClass]="{'is-invalid' : validationRequired && formControls.contactMessage.errors}"></textarea>
+
+                                <div class="invalid-feedback d-block" *ngIf="formSubmitted && formControls.contactMessage.hasError('required')">
+                                    Please enter some message.
+                                </div>
+
+                                <div class="invalid-feedback d-block" *ngIf="formSubmitted && formControls.contactMessage.hasError('minlength')">
+                                    Message should be greater than 10 characters.
+                                </div>
+
+                            </div>
+                        </div>
+                    </div> <!-- / .row -->
+                    <div class="row justify-content-center mt-3">
+                        <div class="col-auto">
+
+                            <!-- Submit -->
+                            <button type="submit" class="btn btn-primary lift">
+                                Send message
+                            </button>
+
+                        </div>
+                    </div> <!-- / .row -->
+                </form>
+
+            </div>
+        </div> <!-- / .row -->
+    </div> <!-- / .container -->
+</section>
