--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <app-header></app-header>
 
 <div class="container">
+
+    <strong>
+        {{ message }}
+    </strong>
+
     <router-outlet></router-outlet>
 </div>
 
