--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -16,20 +16,26 @@
                     <a class="nav-link" routerLink="/webforms" routerLinkActive="active">Webforms</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownOne" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        Examples
+                        Hooks & Sharing
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" routerLink="/lifecycle-hooks" routerLinkActive="active">Lifecycle
-                                Hooks</a></li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownOne">
+                        <li><a class="dropdown-item" routerLink="/lifecycle-hooks" routerLinkActive="active">Lifecycle Hooks</a></li>
                         <li><a class="dropdown-item" routerLink="/share-data" routerLinkActive="active">Share Data</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" routerLink="/share-data-using-service" routerLinkActive="active">Share Data using Service</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTwo" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Pipes
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownTwo">
+                        <li><a class="dropdown-item" routerLink="/custom-pipes" routerLinkActive="active">Custom Pipes</a></li>
+                    </ul>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">Contact us</a>
                 </li>
