--- a/src/app/pages/custom-pipes/custom-pipes.component.html
+++ b/src/app/pages/custom-pipes/custom-pipes.component.html
@@ -4,5 +4,5 @@
     <div class="form-group mb-3">
         <input type="text" class="form-control" name="numberInput" [(ngModel)]="numberInput">
     </div>
-    {{ numberInput }}
+    {{ numberInput | numbertowords }}
 </form>
