--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -35,6 +35,15 @@
                         <li><a class="dropdown-item" routerLink="/custom-pipes" routerLinkActive="active">Custom Pipes</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTwo" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Blogs
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownTwo">
+                        <li><a class="dropdown-item" routerLink="/blog-posts" routerLinkActive="active">Blog Posts</a></li>
+                    </ul>
+                </li>
 
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">Contact us</a>
