lifecycle hook view update

--- a/src/app/pages/lifecycle-hooks/lifecycle-hooks.component.html
+++ b/src/app/pages/lifecycle-hooks/lifecycle-hooks.component.html
@@ -1,1 +1,4 @@
-<p>lifecycle-hooks works!</p>
+<p class="lead text-success">lifecycle-hooks works!</p>
+<button class="btn btn-primary btn-sm" (click)="changeChildMessage()">Change child message</button>
+<hr>
+<app-lifecycle-hooks-child [data]="msg"></app-lifecycle-hooks-child>
