--- a/src/app/pages/blog/post-details/post-details.component.html
+++ b/src/app/pages/blog/post-details/post-details.component.html
@@ -1,8 +1,10 @@
 <p>post-details works!</p>
 
-<ng-container *ngIf="postDetails">
+
+<div *ngIf="(postDetails | async) as postDetails">
     <h1>{{ postDetails.title | titlecase }}</h1>
 
     <p>{{ postDetails.body }}</p>
-</ng-container>
+</div>
+
 
