--- a/src/app/pages/blog/posts/posts.component.html
+++ b/src/app/pages/blog/posts/posts.component.html
@@ -1,11 +1,17 @@
 <p>posts works!</p>
 
 <h1 class="display-6 text-info">Blog Posts</h1>
-<div class="blog-container" *ngIf="posts.length">
-    <div class="card" *ngFor="let post of posts" [routerLink]="['/post-details', post.id]">
-        <div class="card-body">
-          <h5 class="card-title text-dark">{{ post.title | titlecase }}</h5>
-          <p class="card-text">{{ post.body }}</p>
+<div class="blog-container">
+    <ng-container *ngIf="(posts | async); else elseBlock">
+        <div class="card" *ngFor="let post of posts | async" [routerLink]="['/post-details', post.id]">
+            <div class="card-body">
+              <h5 class="card-title text-dark">{{ post.title | titlecase }}</h5>
+              <p class="card-text">{{ post.body }}</p>
+            </div>
         </div>
-    </div>
+    </ng-container>
 </div>
+
+<ng-template #elseBlock>
+    Post is loading. Please wait
+</ng-template>
