template driven form setup

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -36,21 +36,31 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTwo" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownThree" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Blogs
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownTwo">
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownThree">
                         <li><a class="dropdown-item" routerLink="/blog-posts" routerLinkActive="active">Blog Posts</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTwo" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownFour" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         HTTP Calls
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownTwo">
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownFour">
                         <li><a class="dropdown-item" routerLink="/async-pipes" routerLinkActive="active">Async Pipes</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownFive" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Forms
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownFive">
+                        <li><a class="dropdown-item" routerLink="/template-form" routerLinkActive="active">Template Form</a></li>
+                        <li><a class="dropdown-item" routerLink="/reactive-form" routerLinkActive="active">Reactive Form</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -59,7 +69,7 @@
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-success" type="submit">Search</button>
             </form>
         </div>
     </div>
