--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,10 @@
 
 <div class="container page-container">
 
-    <strong>
-        {{ message }}
-    </strong>
+    <div class="alert alert-success">
+        <p>In app.component.html</p>
+        <strong>{{ message }}</strong>
+    </div>
 
     <router-outlet></router-outlet>
 </div>
