--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <div class="container page-container">
 
+    <div class="content"><span>practice app is running!</span></div>
+
     <div class="alert alert-success">
         <p>In app.component.html</p>
         <strong>{{ message }}</strong>
