--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -32,6 +32,7 @@
                         Pipes
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownTwo">
+                        <li><a class="dropdown-item" routerLink="/builtin-pipes" routerLinkActive="active">Builtin Pipes</a></li>
                         <li><a class="dropdown-item" routerLink="/custom-pipes" routerLinkActive="active">Custom Pipes</a></li>
                     </ul>
                 </li>
