--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -67,6 +67,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">Contact us</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/onpush-check" routerLinkActive="active">Onpush Check</a>
+                </li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
